--- a/activity.html
+++ b/activity.html
@@ -1,46 +1,46 @@
 <section class="details">
 	<h1>Szczegóły</h1>
-	<div class="detail">
-		<span class="label">Opiekun</span>
-		<span class="value">Anna Wrotek</span>
+	<div class="group">
+		<div class="label">Opiekun</div>
+		<div class="value">Anna Wrotek</div>
 	</div>
-	<div class="detail">
-		<span class="label">Aktywność</span>
-		<span class="value">Spacer</span>
+	<div class="group">
+		<div class="label">Aktywność</div>
+		<div class="value">Spacer</div>
 	</div>
-	<div class="detail">
-		<span class="label">Data</span>
-		<span class="value">24/01/2020</span>
+	<div class="group">
+		<div class="label">Data</div>
+		<div class="value">24/01/2020</div>
 	</div>
 </section>
 <section class="location">
 	<h1>Trasa</h1>
-	<img src="img/map.jpg">
+	<img src="img/map.png">
 </section>
 <section class="achievements">
 	<h1>Odznaki</h1>
 	<div class="achievement">
-		<img src="img/trophy1.png">
+		<i class="material-icons">directions_walk</i>
 		<span>Spacer</span>
 	</div>
 	<div class="achievement">
-		<img src="img/trophy2.png">
+		<i class="material-icons">hot_tub</i>
 		<span>Mycie</span>
 	</div>
 	<div class="achievement">
-		<img src="img/trophy3.png">
+		<i class="material-icons">restaurant_menu</i>
 		<span>Karmienie</span>
 	</div>
 	<div class="achievement">
-		<img src="img/trophy4.png">
+		<i class="material-icons">school</i>
 		<span>Nauka</span>
 	</div>
 	<div class="achievement">
-		<img src="img/trophy5.png">
+		<i class="material-icons">hot_tub</i>
 		<span>Kąpiel</span>
 	</div>
 	<div class="achievement">
-		<img src="img/trophy5.png">
+		<i class="material-icons">emoji_events</i>
 		<span>Zabawa</span>
 	</div>
 </section>
