--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 			<div class="pet">
 				<img src="img/pet1.jpg">
 			</div>
-			<a href="#">dodaj pupila</a>
+			<a class="button" href="new_pet.html">dodaj pupila</a>
 		</section>
 		<section class="activities">
 			<h1>Ostatnie aktywności</h1>
 			<div class="activity">
-				<span class="type">spacer</span>
 				<span class="date">24/01/2020</span>
-				<a href="#">zobacz szczegóły</a>
-			</div>
-			<div class="activity">
-				<span class="type">opieka</span>
-				<span class="date">25/01/2020</span>
-				<a href="#">zobacz szczegóły</a>
-			</div>
-			<div class="activity">
 				<span class="type">spacer</span>
+				<a href="activity.html">zobacz szczegóły</a>
+			</div>
+			<div class="activity">
+				<span class="date">25/01/2020</span>
+				<span class="type">opieka</span>
+				<a href="activity.html">zobacz szczegóły</a>
+			</div>
+			<div class="activity">
 				<span class="date">26/01/2020</span>
-				<a href="#">zobacz szczegóły</a>
+				<span class="type">spacer</span>
+				<a href="activity.html">zobacz szczegóły</a>
 			</div>
 		</section>
