--- a/activity.html
+++ b/activity.html
@@ -17,30 +17,32 @@
 	<h1>Trasa</h1>
 	<img src="img/map.png">
 </section>
-<section class="achievements">
+<section class="throphies">
 	<h1>Odznaki</h1>
-	<div class="achievement">
-		<i class="material-icons">directions_walk</i>
-		<span>Spacer</span>
-	</div>
-	<div class="achievement">
-		<i class="material-icons">hot_tub</i>
-		<span>Mycie</span>
-	</div>
-	<div class="achievement">
-		<i class="material-icons">restaurant_menu</i>
-		<span>Karmienie</span>
-	</div>
-	<div class="achievement">
-		<i class="material-icons">school</i>
-		<span>Nauka</span>
-	</div>
-	<div class="achievement">
-		<i class="material-icons">hot_tub</i>
-		<span>Kąpiel</span>
-	</div>
-	<div class="achievement">
-		<i class="material-icons">emoji_events</i>
-		<span>Zabawa</span>
+	<div class="achievements">
+		<div class="achievement">
+			<i class="material-icons">directions_walk</i>
+			<span>Spacer</span>
+		</div>
+		<div class="achievement">
+			<i class="material-icons">hot_tub</i>
+			<span>Mycie</span>
+		</div>
+		<div class="achievement">
+			<i class="material-icons">restaurant_menu</i>
+			<span>Karmienie</span>
+		</div>
+		<div class="achievement">
+			<i class="material-icons">school</i>
+			<span>Nauka</span>
+		</div>
+		<div class="achievement">
+			<i class="material-icons">hotel</i>
+			<span>Drzemka</span>
+		</div>
+		<div class="achievement">
+			<i class="material-icons">emoji_events</i>
+			<span>Zabawa</span>
+		</div>
 	</div>
 </section>
