--- a/new_pet.html
+++ b/new_pet.html
@@ -65,5 +65,6 @@
 	</section>
 	<section class="panel">
 		<input type="submit" value="zapisz">
+		<a class="button empty" href="pets.html">anuluj</a>
 	</section>
 </form>
