--- a/template.html
+++ b/template.html
@@ -17,6 +17,7 @@
 </head>
 <body class="{body_class}">
 <div class="container">
+    <div class="mask"></div>
     <nav class="head">
         <div class="logo">
             <a href="index.html"><img src="img/logo.png"></a>
