--- a/activity.html
+++ b/activity.html
@@ -1,48 +1,48 @@
 <section class="details">
-	<h1>Szczegóły</h1>
-	<div class="group">
-		<div class="label">Opiekun</div>
-		<div class="value">Anna Wrotek</div>
-	</div>
-	<div class="group">
-		<div class="label">Aktywność</div>
-		<div class="value">Spacer</div>
-	</div>
-	<div class="group">
-		<div class="label">Data</div>
-		<div class="value">24/01/2020</div>
-	</div>
-</section>
-<section class="location">
-	<h1>Trasa</h1>
-	<img src="img/map.png">
-</section>
-<section class="throphies">
-	<h1>Odznaki</h1>
-	<div class="achievements">
-		<div class="achievement">
-			<i class="material-icons">directions_walk</i>
-			<span>Spacer</span>
-		</div>
-		<div class="achievement">
-			<i class="material-icons">hot_tub</i>
-			<span>Mycie</span>
-		</div>
-		<div class="achievement">
-			<i class="material-icons">restaurant_menu</i>
-			<span>Karmienie</span>
-		</div>
-		<div class="achievement">
-			<i class="material-icons">school</i>
-			<span>Nauka</span>
-		</div>
-		<div class="achievement">
-			<i class="material-icons">hotel</i>
-			<span>Drzemka</span>
-		</div>
-		<div class="achievement">
-			<i class="material-icons">emoji_events</i>
-			<span>Zabawa</span>
-		</div>
-	</div>
-</section>
+			<h1>Szczegóły</h1>
+			<div class="group">
+				<div class="label">Opiekun</div>
+				<div class="value">Anna Wrotek</div>
+			</div>
+			<div class="group">
+				<div class="label">Aktywność</div>
+				<div class="value">Spacer</div>
+			</div>
+			<div class="group">
+				<div class="label">Data</div>
+				<div class="value">24/01/2020</div>
+			</div>
+		</section>
+		<section class="location">
+			<h1>Trasa</h1>
+			<img src="img/map.png">
+		</section>
+		<section class="throphies">
+			<h1>Odznaki</h1>
+			<div class="achievements">
+				<div class="achievement">
+					<i class="material-icons">directions_walk</i>
+					<span>Spacer</span>
+				</div>
+				<div class="achievement">
+					<i class="material-icons">hot_tub</i>
+					<span>Mycie</span>
+				</div>
+				<div class="achievement">
+					<i class="material-icons">restaurant_menu</i>
+					<span>Karmienie</span>
+				</div>
+				<div class="achievement">
+					<i class="material-icons">school</i>
+					<span>Nauka</span>
+				</div>
+				<div class="achievement">
+					<i class="material-icons">hotel</i>
+					<span>Drzemka</span>
+				</div>
+				<div class="achievement">
+					<i class="material-icons">mood</i>
+					<span>Zabawa</span>
+				</div>
+			</div>
+		</section>
