--- a/index.html
+++ b/index.html
@@ -2,24 +2,29 @@
 			<h1>Moje pupile</h1>
 			<div class="pet">
 				<img src="img/pet1.jpg">
+				<div class="name">Dingo</div>
 			</div>
-			<a class="button" href="new_pet.html">dodaj pupila</a>
+			<a class="button empty" href="new_pet.html">dodaj pupila</a>
 		</section>
 		<section class="activities">
 			<h1>Ostatnie aktywności</h1>
 			<div class="activity">
 				<span class="date">24/01/2020</span>
 				<span class="type">spacer</span>
-				<a href="activity.html">zobacz szczegóły</a>
+				<span class="status">zakończono</span>
+				<a class="button" href="activity.html">zobacz szczegóły</a>
 			</div>
 			<div class="activity">
 				<span class="date">25/01/2020</span>
 				<span class="type">opieka</span>
-				<a href="activity.html">zobacz szczegóły</a>
+				<span class="status">zakończono</span>
+				<a class="button" href="activity.html">zobacz szczegóły</a>
 			</div>
 			<div class="activity">
 				<span class="date">26/01/2020</span>
 				<span class="type">spacer</span>
-				<a href="activity.html">zobacz szczegóły</a>
+				<span class="status">do akceptacji</span>
+				<a class="button" href="activity.html">zobacz szczegóły</a>
 			</div>
+			<a class="button empty" href="new_order.html">dodaj nowe zlecenie</a>
 		</section>
