--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,7 +16,7 @@
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </head>
-<body class="{body_class}">
+<body class="index">
 <div class="container">
     <div class="mask"></div>
     <nav class="head">
@@ -23,7 +24,7 @@
             <a href="index.html"><img src="img/logo.png"></a>
         </div>
         <div class="title">
-            {title}
+            Strona główna
         </div>
         <div class="menu_button">
             <i class="material-icons">close</i>
@@ -41,7 +42,36 @@
         </ul>
     </div>
     <div class="body">
-        {content}
+        <section class="pets">
+			<h1>Moje pupile</h1>
+			<div class="pet">
+				<img src="img/pet1.jpg">
+				<div class="name">Dingo</div>
+			</div>
+			<a class="button empty" href="new_pet.html">dodaj pupila</a>
+		</section>
+		<section class="activities">
+			<h1>Ostatnie aktywności</h1>
+			<div class="activity">
+				<span class="date">24/01/2020</span>
+				<span class="type">spacer</span>
+				<span class="status">zakończono</span>
+				<a class="button" href="activity.html">zobacz szczegóły</a>
+			</div>
+			<div class="activity">
+				<span class="date">25/01/2020</span>
+				<span class="type">opieka</span>
+				<span class="status">zakończono</span>
+				<a class="button" href="activity.html">zobacz szczegóły</a>
+			</div>
+			<div class="activity">
+				<span class="date">26/01/2020</span>
+				<span class="type">spacer</span>
+				<span class="status">do akceptacji</span>
+				<a class="button" href="activity.html">zobacz szczegóły</a>
+			</div>
+			<a class="button empty" href="new_order.html">dodaj nowe zlecenie</a>
+		</section>
     </div>
     <div class="footer">
     </div>
