--- a/html/activity.html
+++ b/html/activity.html
@@ -56,6 +56,10 @@
                 <div class="label">Data</div>
                 <div class="value">24/01/2020</div>
             </div>
+            <div class="group">
+                <div class="label">Status</div>
+                <div class="value">Zakończono</div>
+            </div>
         </section>
         <section class="location">
             <h1>Trasa</h1>
