--- a/html/new_activity.html
+++ b/html/new_activity.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
     <div class="body">
-        <form method="post" action="orders.html">
+        <form method="post" action="orders_added.html">
             <section class="details">
                 <h1>Szczegóły</h1>
                 <div class="group">
