--- a/html/new_message.html
+++ b/html/new_message.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
     <div class="body">
-        <form method="post" action="messages.html">
+        <form method="post" action="messages_sent.html">
             <section class="message">
                 <h1>Nowa wiadomość</h1>
                 <div class="message new">
