--- a/html/new_pet.html
+++ b/html/new_pet.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
     <div class="body">
-        <form method="post" action="pets.html">
+        <form method="post" action="pets_added.html">
 			<section class="sizes">
 				<h1>Rozmiar</h1>
 				<div class="size">
