--- a/html/orders.html
+++ b/html/orders.html
@@ -60,7 +60,7 @@
                 <span class="date">26/01/2020</span>
                 <span class="type">spacer</span>
                 <span class="status">oczekuje</span>
-                <a class="button" href="activity.html">zobacz szczegóły</a>
+                <a class="button" href="activity_to_accept.html">zobacz szczegóły</a>
             </div>
             <a class="button empty" href="new_activity.html">dodaj nowe zlecenie</a>
         </section>
