--- a/html/register.html
+++ b/html/register.html
@@ -42,7 +42,10 @@
         </ul>
     </div>
     <div class="body">
-        <form method="post" action="login.html">
+        <form method="post" action="login_registered.html">
+            <section class="logo">
+                <img src="img/logo.png">
+            </section>
             <section class="login">
                 <div class="group">
                     <div class="label">Imię</div>
