--- a/html/settings.html
+++ b/html/settings.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
     <div class="body">
-        <form method="post" action="settings.html">
+        <form method="post" action="settings_saved.html">
             <section class="login">
                 <div class="group">
                     <div class="label">Imię</div>
