--- a/html/activity.html
+++ b/html/activity.html
@@ -37,7 +37,7 @@
             <li><a href="orders.html">Zlecenia</a></li>
             <li><a href="messages.html">Wiadomości</a></li>
             <li><a href="regulations.html">Regulamin</a></li>
-            <li><a href="settings.html">Ustawienia</a></li>
+            <li><a href="settings.html">Profil</a></li>
             <li><a href="login.html">Wyloguj</a></li>
         </ul>
     </div>
@@ -64,6 +64,16 @@
         <section class="location">
             <h1>Trasa</h1>
             <img src="img/map.png">
+        </section>
+        <section class="rating">
+            <h1>Ocena</h1>
+            <div class="rate">
+                <i class="star1 material-icons">star</i>
+                <i class="star2 material-icons">star</i>
+                <i class="star3 material-icons">star</i>
+                <i class="star4 material-icons">star</i>
+                <i class="star5 material-icons">star</i>
+            </div>
         </section>
         <section class="throphies">
             <h1>Odznaki</h1>
