--- a/html/orders_added.html
+++ b/html/orders_added.html
@@ -42,6 +42,9 @@
         </ul>
     </div>
     <div class="body">
+        <div class="success">
+            Dodano zlecenie
+        </div>
         <section class="activities">
             <h1>Zlecenia</h1>
             <div class="activity">
