--- a/html/settings_saved.html
+++ b/html/settings_saved.html
@@ -43,6 +43,9 @@
     </div>
     <div class="body">
         <form method="post" action="settings_saved.html">
+            <div class="success">
+                Zapisano zmiany
+            </div>
             <section class="login">
                 <div class="group">
                     <div class="label">Imię</div>
