--- a/html/activity_to_accept.html
+++ b/html/activity_to_accept.html
@@ -16,7 +16,7 @@
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </head>
-<body class="index">
+<body class="activity">
 <div class="container">
     <div class="mask"></div>
     <nav class="head">
@@ -24,7 +24,7 @@
             <a href="index.html"><img src="img/logo.png"></a>
         </div>
         <div class="title">
-            Strona główna
+            Aktywność
         </div>
         <div class="menu_button">
             <i class="material-icons">close</i>
@@ -42,36 +42,27 @@
         </ul>
     </div>
     <div class="body">
-        <section class="pets">
-			<h1>Moje pupile</h1>
-			<div class="pet">
-				<img src="img/pet1.jpg">
-				<div class="name">Dingo</div>
-			</div>
-			<a class="button empty" href="new_pet.html">dodaj pupila</a>
-		</section>
-		<section class="activities">
-			<h1>Ostatnie aktywności</h1>
-			<div class="activity">
-				<span class="date">24/01/2020</span>
-				<span class="type">spacer</span>
-				<span class="status">zakończono</span>
-				<a class="button" href="activity.html">zobacz szczegóły</a>
-			</div>
-			<div class="activity">
-				<span class="date">25/01/2020</span>
-				<span class="type">opieka</span>
-				<span class="status">zakończono</span>
-				<a class="button" href="activity.html">zobacz szczegóły</a>
-			</div>
-			<div class="activity">
-				<span class="date">26/01/2020</span>
-				<span class="type">spacer</span>
-				<span class="status">do akceptacji</span>
-				<a class="button" href="activity.html">zobacz szczegóły</a>
-			</div>
-			<a class="button empty" href="new_order.html">dodaj nowe zlecenie</a>
-		</section>
+        <section class="details">
+            <h1>Szczegóły</h1>
+            <div class="group">
+                <div class="label">Opiekun</div>
+                <div class="value">Anna Wrotek</div>
+            </div>
+            <div class="group">
+                <div class="label">Aktywność</div>
+                <div class="value">Spacer</div>
+            </div>
+            <div class="group">
+                <div class="label">Data</div>
+                <div class="value">24/01/2020</div>
+            </div>
+            <div class="group">
+                <div class="label">Status</div>
+                <div class="value">Do akceptacji</div>
+            </div>
+            <a class="button" href="activity_accepted.html">Akceptuj</a>
+            <a class="button empty" href="orders.html">Odrzuć</a>
+        </section>
     </div>
     <div class="footer">
     </div>
