--- a/html/register.html
+++ b/html/register.html
@@ -37,7 +37,7 @@
             <li><a href="orders.html">Zlecenia</a></li>
             <li><a href="messages.html">Wiadomości</a></li>
             <li><a href="regulations.html">Regulamin</a></li>
-            <li><a href="settings.html">Ustawienia</a></li>
+            <li><a href="settings.html">Profil</a></li>
             <li><a href="login.html">Wyloguj</a></li>
         </ul>
     </div>
